--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3179,7 +3179,7 @@
 
 	#main {
 		padding: 0em 0 6em 0 ;
-		background: #13131;
+		background: #B35440;
 	}
 
 		@media screen and (max-width: 736px) {
