--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1623,7 +1623,7 @@
 	}
 
 	body {
-		background: #ffffff;
+		background: #3A3A3A;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
