Font Color Change
Attempt

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2859,7 +2859,7 @@
 		#header .logo {
 			display: block;
 			border-bottom: 0;
-			color: inherit;
+			color: #DCDCDC;
 			font-weight: 900;
 			letter-spacing: 0.35em;
 			margin: 0 0 2.5em 0;
