--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1640,7 +1640,7 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #585858;
+		color: #DBDBDB;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
