--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1896,12 +1896,12 @@
 			}
 
 			.icon.style2:hover {
-				color: #f2849e;
-				border-color: #f2849e;
+				color: #A5D1E2;
+				border-color: #A5D1E2;
 			}
 
 			.icon.style2:active {
-				background-color: rgba(242, 132, 158, 0.1);
+				background-color: rgba(88, 88, 88, 0.1);
 			}
 
 /* List */
@@ -2177,8 +2177,8 @@
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-bottom-color: #f2849e;
-			box-shadow: inset 0 -1px 0 0 #f2849e;
+			border-bottom-color: #A5D1E2;
+			box-shadow: inset 0 -1px 0 0 #A5D1E2;
 		}
 
 	.select-wrapper {
@@ -2288,8 +2288,8 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #f2849e;
-			box-shadow: 0 0 0 1px #f2849e;
+			border-color: #A5D1E2;
+			box-shadow: 0 0 0 1px #A5D1E2;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2509,8 +2509,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #A5D1E2 !important;
+			box-shadow: inset 0 0 0 2px #A5D1E2;
 		}
 
 		input[type="submit"]:active,
@@ -2552,7 +2552,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #f2849e;
+				background-color: #A5D1E2;
 			}
 
 			input[type="submit"].special:active,
